unc-abi/src/snapshots/near_abi__tests__serde_abiborshparameter_struct_empty.snap
---
source: unc-abi/src/lib.rs
expression: expected_json_str
---
{
  "name": "foo",
  "type_schema": {
    "declaration": "Unit",
    "definitions": {
      "Unit": {
        "Struct": null
      }
    }
  }
}
