unc-abi/src/snapshots/near_abi__tests__serde_abitype_borsh_struct_empty.snap
---
source: unc-abi/src/lib.rs
expression: expected_json_str
---
{
  "serialization_type": "borsh",
  "type_schema": {
    "declaration": "Unit",
    "definitions": {
      "Unit": {
        "Struct": null
      }
    }
  }
}
